[gd_scene load_steps=56 format=3 uid="uid://bx4tokekfd0xf"]

[ext_resource type="Script" uid="uid://4hftbrpw4ol1" path="res://scripts/knight.gd" id="1_3i0j8"]
[ext_resource type="Texture2D" uid="uid://u5nc18jn6qey" path="res://level1/assets/sprites/bat.png" id="2_3i0j8"]
[ext_resource type="Texture2D" uid="uid://bk78fqevwwaw" path="res://assets/sprites/characters/smoke gif.png" id="2_14u3r"]
[ext_resource type="Texture2D" uid="uid://c35ghopipp34e" path="res://assets/sprites/characters/batspin.png" id="3_0dyjn"]
[ext_resource type="Texture2D" uid="uid://lnw50ld8vj0o" path="res://assets/sprites/characters/batcart-sheet.png" id="3_5fsgc"]
[ext_resource type="AudioStream" uid="uid://di754upv7r2el" path="res://assets/sounds/wing-flap-1-6434.mp3" id="3_qxgmm"]
[ext_resource type="Texture2D" uid="uid://d1f3rs42y0yee" path="res://assets/sprites/characters/nervousbat.png" id="4_swm0g"]
[ext_resource type="Texture2D" uid="uid://u4clwt1lngln" path="res://assets/sprites/characters/shield-sheet.png" id="7_k2txo"]
[ext_resource type="AudioStream" uid="uid://dpmnw1vy1ao23" path="res://assets/sounds/shield_impact-4-382413.mp3" id="8_mvyd6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qd0la"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 160, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggoaa"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 0, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_8pn50"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 1024, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt444"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 2048, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2wyf"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 3072, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_irm4b"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 4096, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_m012m"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 5120, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vh21"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 6144, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgw7t"]
atlas = ExtResource("2_14u3r")
region = Rect2(0, 7168, 1024, 1024)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm0xy"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 160, 81, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xgw7t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd0la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggoaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8pn50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt444")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2wyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irm4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m012m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vh21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgw7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm0xy")
}],
"loop": false,
"name": &"smoke",
"speed": 30.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3i0j8"]
atlas = ExtResource("2_3i0j8")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxgmm"]
atlas = ExtResource("2_3i0j8")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3cm67"]
atlas = ExtResource("3_5fsgc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8y5l"]
atlas = ExtResource("3_5fsgc")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw3uw"]
atlas = ExtResource("3_5fsgc")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ok4f"]
atlas = ExtResource("3_5fsgc")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7bgd"]
atlas = ExtResource("3_5fsgc")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi1vv"]
atlas = ExtResource("3_5fsgc")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06ia3"]
atlas = ExtResource("3_5fsgc")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a0iq"]
atlas = ExtResource("4_swm0g")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ko4r"]
atlas = ExtResource("4_swm0g")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpjby"]
atlas = ExtResource("4_swm0g")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouiji"]
atlas = ExtResource("4_swm0g")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7g6j"]
atlas = ExtResource("4_swm0g")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlkoa"]
atlas = ExtResource("4_swm0g")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dyjn"]
atlas = ExtResource("3_0dyjn")
region = Rect2(0, 0, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fsgc"]
atlas = ExtResource("3_0dyjn")
region = Rect2(0, 32, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swm0g"]
atlas = ExtResource("3_0dyjn")
region = Rect2(0, 64, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2txo"]
atlas = ExtResource("3_0dyjn")
region = Rect2(0, 96, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvyd6"]
atlas = ExtResource("3_0dyjn")
region = Rect2(0, 128, 42, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14u3r"]
atlas = ExtResource("3_0dyjn")
region = Rect2(0, 160, 42, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rhr3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3i0j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxgmm")
}],
"loop": true,
"name": &"flapwing",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3cm67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8y5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw3uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ok4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7bgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi1vv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06ia3")
}],
"loop": true,
"name": &"minecart",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a0iq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ko4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpjby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouiji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7g6j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlkoa")
}],
"loop": true,
"name": &"nervous",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dyjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fsgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_swm0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2txo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvyd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14u3r")
}],
"loop": true,
"name": &"spin",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t53lx"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5fsgc"]
size = Vector2(52.5, 19.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_swm0g"]
size = Vector2(52, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yp3h"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 128, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_co5rl"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 224, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujkqr"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 256, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vx178"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 288, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2y7m"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 320, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8aj7"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 0, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8y5s"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 32, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rhhm5"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 64, 81, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdmsg"]
atlas = ExtResource("7_k2txo")
region = Rect2(0, 96, 81, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bt444"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yp3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co5rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujkqr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vx178")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2y7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8aj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8y5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhhm5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdmsg")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[node name="knight" type="CharacterBody2D"]
floor_snap_length = 4.9
script = ExtResource("1_3i0j8")

[node name="smoke" type="AnimatedSprite2D" parent="."]
modulate = Color(0.680321, 0.680321, 0.680321, 1)
z_index = 3
position = Vector2(-30, 0)
scale = Vector2(0.0624251, 0.0422401)
sprite_frames = SubResource("SpriteFrames_xgw7t")
animation = &"smoke"

[node name="knight" type="AnimatedSprite2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-3, -1)
scale = Vector2(1.54688, 1.60156)
sprite_frames = SubResource("SpriteFrames_rhr3r")
animation = &"flapwing"
autoplay = "flapwing"
frame_progress = 0.226198

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, -1)
shape = SubResource("CircleShape2D_t53lx")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qxgmm")

[node name="minecart_hitbox" type="CollisionShape2D" parent="."]
position = Vector2(-1, 10.25)
shape = SubResource("RectangleShape2D_5fsgc")
disabled = true

[node name="minecart_hitbox2" type="CollisionShape2D" parent="."]
position = Vector2(-1, 20)
shape = SubResource("RectangleShape2D_swm0g")
disabled = true

[node name="slope_angle" type="RayCast2D" parent="."]
position = Vector2(25, -4)
target_position = Vector2(1, 136)

[node name="shield" type="AnimatedSprite2D" parent="."]
position = Vector2(-9, -2)
scale = Vector2(0.848717, 0.648438)
sprite_frames = SubResource("SpriteFrames_bt444")

[node name="ShieldImpact-4-382413" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-1, 29)
stream = ExtResource("8_mvyd6")
volume_db = -8.668
